# espc3-tcptool

./: Cargo.toml  partitions.csv
src/: config.rs  error.rs  lib.rs  main.rs  storage.rs  tcp_client_manager.rs  tcp_server.rs  uart.rs  wifi.rs
